--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
         "jsx-a11y/no-static-element-interactions": "off",
         "react/jsx-wrap-multilines": "off",
 
+        "operator-linebreak": "off",
         "import/order": "off",
         "max-len": ["warn", 150],
         "comma-dangle": "off",
